docs/7.57/md/abenmethods.md
---
title: "ABAP Objects - Methods"
description: |
  Methods are declared using the statements -   METHODS(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm) for instance methods -   CLASS-METHODS(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods.htm) for static methods These are only possible in
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmethods.htm"
abapFile: "abenmethods.htm"
keywords: ["do", "if", "try", "method", "class", "data", "types", "abenmethods"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_declarations.htm) →  [Classes and Interfaces (ABAP Objects)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclasses_and_interfaces.htm) →  [ABAP Objects - Components in Classes and Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_ifac_components.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Objects - Methods, ABENMETHODS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

ABAP Objects - Methods

Methods are declared using the statements

-   [METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm) for instance methods
-   [CLASS-METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods.htm) for static methods

These are only possible in the declaration part of classes and interfaces.

Methods determine the behavior of a class. [Instance methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninstance_method_glosry.htm "Glossary Entry") are declared by the statement [METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm), [static methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstatic_method_glosry.htm "Glossary Entry") are declared by the statement [CLASS-METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods.htm). The declaration defines the interface of a method. For special tasks there are different types of methods:

-   General [instance methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_general.htm) and [static methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods_general.htm)
-   Functional [instance methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_functional.htm) and [static methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods_functional.htm)
-   [Instance constructors](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_constructor.htm) and [static constructors](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods_constructor.htm)
-   [Event handlers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_event_handler.htm) and [static event handlers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods_event_handler.htm)

The following methods are also available:

-   [Test methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods_testing.htm) of ABAP Unit, which can only be declared as instance methods.
-   [AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_methods.htm) methods, which are implemented in a database-specific language and not in ABAP.

Continue
[METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapmethods.htm)
[CLASS-METHODS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapclass-methods.htm)